--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -34,19 +34,19 @@
 @import "nav";
 @import "member";
 @import "plan";
-@import "./writeBlog";
+@import "writeBlog";
 @import "./components/card.scss";
 @import "groupView";
 @import "blogView";
 @import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
-@import "./slider.scss";
-@import "./partinGroups.scss";
-@import "./profileMem.scss";
-@import "./setupGroup.scss";
-@import "./setupTourn.scss";
-@import "./tourStatus.scss";
+@import "slider";
+@import "partinGroups";
+@import "profileMem";
+@import "setupGroup";
+@import "setupTourn";
+@import "tourStatus";
 @import "blogShow";
-@import "./enrollMem.scss";
+@import "enrollMem";
 @import "./loginMember.scss";
 @import "groupShow";
 @import "./homepageBody.scss";
