--- a/dev/sass/components/_card.scss
+++ b/dev/sass/components/_card.scss
@@ -1,11 +1,11 @@
 //card
 .cardOriginalTem {
     width: 290px;
-    // min-width: 290px;
     height: 353px;
     font-size: 16px;
     cursor: pointer;
     box-shadow: 2px 1px 4px lightgray;
+    // border:4px solid blue;
 }
 
 //card
@@ -176,23 +176,19 @@
     min-width: 290px;
     height: 417px;
     font-size: 16px;
+    // border: 1px solid red;
 }
-
 .cardBlog a {
     color: black;
 }
-
 .cardBlogContent {
-    /* border: 1px solid orange; */
+    // border: 1px solid orange; 
     margin-right: 10px;
     background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url(../images/card_blog_bg.png);
     background-position: right;
     background-size: 38%;
     background-repeat: no-repeat;
-
 }
-
-
 .cardBlogContent p {
     /* border: 1px solid red; */
     margin-left: 19px;
@@ -248,7 +244,6 @@
     /* border: 1px solid red; */
     width: 254px;
     height: 70px;
-    margin-left: 7px;
     margin-top: -6px;
 }
 
@@ -267,10 +262,8 @@
 }
 
 .cardSchedule .cardLike img {
-    /* border: 1px solid blue; */
     margin-left: 130px;
 }
-
 .cardScheduleContent {
     display: flex;
     flex-wrap: wrap;
