connect all lightbox

--- a/dev/sass/_setupTourn.scss
+++ b/dev/sass/_setupTourn.scss
@@ -1,4 +1,10 @@
-// @import "./variables";
+.setall{
+    width: 500px;
+    color: $colorSecondary3;
+    margin: 0 auto;
+    border-radius: 5px;
+    overflow: hidden;
+}
 .setupname{
     background-color: $colorSecondary1;
     margin: 0 0 -1 0;
@@ -21,29 +27,24 @@
      margin-top: 20px;
 }
 .rightbutton{
-    @include button(88px, 33px, $colorMain1, $colorSecondary2, $colorMain1);
+    @include button(90px, 35px, $colorMain1, $colorSecondary2, $colorMain1);
     margin-left: 25px;
-    cursor: pointer;
 }
 .leftbutton{
-    @include button(90px, 35px, $colorSecondary2, $colorMain1, $colorSecondary2);
-    cursor: pointer;
+    @include button(90px, 35px, $colorMain1, $colorSecondary2, $colorMain1);
 }
 .twobtn{
     text-align: center;
-    margin: 20px;
+    padding: 10px;
     height: 50px;
 }
-.setall{
-    width: 500px;
-    color: $colorSecondary3;
-}
+
 @media screen and (max-width: $breakpoint-sm){
     .setall{
         width: 100%;
     }
     .twobtn{
         text-align: center;
-        margin: 10px;
+        padding: 10px;
     }
 }
