--- a/dev/sass/_lightBox.scss
+++ b/dev/sass/_lightBox.scss
@@ -1,3 +1,4 @@
+// myModal
 .lightBoxWall {
   display: none; 
   position: fixed; 
@@ -10,7 +11,7 @@
   height: 100vh;
 }
 .lightBoxWallforTourn {
-  display: block; 
+  display: none; 
   position: fixed; 
   z-index: 7; 
   left: 0;
@@ -19,6 +20,7 @@
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
   height: 100vh;
+  
 }
 /* plan Modal Content */
 .setnameform {
