--- a/dev/sass/_nav.scss
+++ b/dev/sass/_nav.scss
@@ -72,6 +72,7 @@
         }
       }
       .navRight {
+        // border: 1px solid red;
         width: 145px;
         padding: 10px;
         display: flex;
@@ -85,6 +86,19 @@
           padding: 0;          
           line-height: 70px;
           color: $colorSecondary3; 
+          // border: 1px solid red;
+        }
+        #memberPic{
+          display: none;
+          border: 1px solid red;
+          height: 60px;
+          width: 60px;
+          border-radius: 50%;
+          transform: translateX(-18px) translateY(10px);
+          img{
+            width: 100%;
+            height: 100%;
+          }
         }
       }   
     }  
