--- a/dev/sass/_plan.scss
+++ b/dev/sass/_plan.scss
@@ -408,17 +408,24 @@ ul,ol {
             height: 155px;
             overflow: hidden;
             position: relative;
+
             .planDateCross{
               position: absolute;
               top: 0;
+              right: 0;
+              z-index:99;
               img{
                 width:15px;
                 padding: 0;
                 margin: 2px;
+    
               }
             }
-            img{
-              width: 100%;
+            .spotPic{
+              // width: 100%;
+              height: 100%;
+              position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+
             }
             .planKeepAttracCon{
               width: 100%;
