--- a/dev/sass/_lightBox.scss
+++ b/dev/sass/_lightBox.scss
@@ -54,3 +54,69 @@
 
 
 }
+
+.spotLightBox {
+  margin: 50px auto;
+  background-color: white;
+  border:1px solid red;
+  padding:20px;
+  max-width: 390px;
+  height: 660px;
+  display: flex;
+  flex-direction: column;
+  .closedBtn {
+    width: 24px;
+    height: 24px;
+    align-self: flex-end;
+    img{
+      width:100%;
+    }
+  }
+    
+  .spotLightBoxImg {
+    max-width: 350px;
+    height: 220px;
+    margin: 10px auto;
+    overflow: hidden;
+    img{
+      width: 100%;
+    }
+  }
+  .spotLightBox1stCol{
+    padding: 5px;
+    display: flex;
+    font-weight: 400;
+    justify-content: space-between;
+    .starForHot{
+      display: flex;
+      div{
+        width: 20px;
+        height: 20px;
+        img {
+          width: 100%;
+        }
+        // background-size: 20px 20px;
+
+      }
+    }
+  }
+  .spotName{
+    font-weight: 300;
+    padding: 0 5px;
+  }
+  .spotContent{
+    margin-top: 30px;
+    div{
+      padding: 5px;
+    }
+  }
+  .heartimg{
+    width: 20px;
+    height: 20px;
+    align-self: flex-end;
+    img {
+      width: 100%;
+    }
+  }
+}
+
