--- a/dev/sass/_nav.scss
+++ b/dev/sass/_nav.scss
@@ -19,7 +19,6 @@
       .navLeft{
         padding-left: 10px;
         a {
-          // border: 1px solid red;
           padding: 5px;
           display: flex;
           color: $colorSecondary3;
@@ -27,7 +26,6 @@
             height: 70px;
           }
           div.daijoubu{
-            // border: 1px solid red;
             margin-left: 10px;
             display: flex;
             flex-direction: column;
@@ -43,13 +41,11 @@
         }
       }
       .navCenter{
-        // border: 1px solid red;
         width: 414px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         a {
-          // border: 1px solid red;
           width: 80px;
           height: 50px;
           text-align: center;
@@ -72,7 +68,6 @@
         }
       }
       .navRight {
-        // border: 1px solid red;
         width: 145px;
         padding: 10px;
         display: flex;
@@ -86,18 +81,16 @@
           padding: 0;          
           line-height: 70px;
           color: $colorSecondary3; 
-          // border: 1px solid red;
         }
         #memberPic{
           display: none;
-          border: 1px solid red;
           height: 60px;
           width: 60px;
           border-radius: 50%;
+          overflow: hidden;
           transform: translateX(-18px) translateY(10px);
           img{
             width: 100%;
-            height: 100%;
           }
         }
       }   
@@ -107,8 +100,6 @@
     }
   } 
 }
-
-
 
 @media screen and (max-width: 950px){
   .mainBody{
@@ -139,7 +130,6 @@
   }
 }
 #panel{
-  // border: 1px solid red;
   padding: 30px;
   display: none;
   text-align: center;
@@ -150,7 +140,6 @@
   z-index: 30;
 }
 #panel a{
-  // border: 1px solid red;
   font-size: $content;
   color: $colorSecondary3; 
   text-decoration: none;
@@ -161,7 +150,6 @@
   }
 }
 .hamburger {
-  // border: 1px solid red;
   padding: 15px 25px;
   display: inline-block;
   cursor: pointer;
@@ -184,7 +172,6 @@
   .hamburger.is-active .hamburger-inner::after {
     background-color: #000; }
 .hamburger-box{
-  // border: 1px solid red;
   width: 30px;
   height: 24px;
   display: inline-block;
