--- a/dev/sass/_blogShow.scss
+++ b/dev/sass/_blogShow.scss
@@ -17,11 +17,11 @@ a {
         position: fixed;
         right: 5px;
         top: 350px;
+        z-index: 99;
     }
     .coverPhoto {
         width: 100%;
         margin: 0 auto;
-        // border: 1px solid green;
         min-height: 40vh;
         background-image: url(../images/coverBlog.jpg);
         background-repeat: no-repeat;
@@ -30,17 +30,14 @@ a {
         margin-bottom: 50px;
     }
     .writerBlog {
-        // border: 1px solid black;
         width: 80%;
         min-height: 15vh;
         margin: 0 auto;
-        // display: flex;
+
         .boxWriter {
-            // border: 1px solid green;
             width: 70%;
         }
         .profileAuthor {
-            // border: 1px solid red;
             min-width: 100px;
             min-height: 100px;
             border-radius: 50%;
@@ -48,23 +45,23 @@ a {
             margin-right: 5px;
             background-image: url(../images/profile.jpg);
             background-size: cover;
+            vertical-align : top;
+
         }
         table {
-            // border: 1px solid red;
             min-width: 100px;
             min-height: 50%;
             display: inline-block;
             margin-bottom: 10px;
+            vertical-align :top;
         }
         button {
             float: right;
-            margin-top: 10px;
+            margin-top: 50px;
         }
     }
     .blogContent {
-        // border: 1px solid blue;
         width: 80%;
-        // height: 100vh;
         margin: 0 auto;
         margin-top: 20px;
         display: flex;
@@ -91,23 +88,24 @@ a {
             }
         }
         .popular {
-            // border: 1px solid green;
-            // max-height: 60vh;
             width: (100% - 70% -0.5%);
-            margin: 0;
+            margin: 5px;
             .popTitle {
                 text-align: center;
-                background-color: $colorMain1;
+                background-color: $colorSecondary1;
+                color: $colorMain1;
+                padding:5px;
             }
             .blogAds {
                 position: relative;
-                margin: 0 auto;
+                margin: 5px ;
                 .adsMask {
                     position: absolute;
                     bottom: 0;
-                    background: rgb(0, 0, 0);
                     background: rgba(0, 0, 0, 0.5);
-                    color: #f1f1f1;
+                    p{
+                        color: $colorMain2;
+                    }
                     width: 100%;
                     text-align: center;
                     font-size: 0.8rem;
@@ -116,3 +114,11 @@ a {
         }
     }
 }
+
+// @media screen and (min-width: $breakpoint-md) {
+//     .containerBlog {
+//     .popular { 
+//         display: none;
+//     }
+// }
+// }
