--- a/dev/sass/components/_card.scss
+++ b/dev/sass/components/_card.scss
@@ -75,7 +75,7 @@
 
 .cardLike {
     display: flex;
-    border: 1px solid red; 
+    // border: 1px solid red; 
     /* height: 32px; */
     margin-top: 2px;
     margin-left: 12px;
