--- a/dev/sass/_nav.scss
+++ b/dev/sass/_nav.scss
@@ -5,7 +5,7 @@
   position: relative;
   .navBg{
     height: 80px;
-    background-image: linear-gradient(180deg, $colorSecondary2 , rgba(255, 255, 255, 0.1));
+    background-color: white;
     z-index: 5;
     position: fixed;
     top:0;
@@ -23,7 +23,7 @@
           display: flex;
           color: $colorSecondary3;
           img {
-            height: 70px;
+            height: 65px;
           }
           div.daijoubu{
             margin-left: 10px;
@@ -69,6 +69,7 @@
       }
       .navRight {
         width: 145px;
+        margin-right: 15px;
         padding: 10px;
         display: flex;
         justify-content: space-between;
@@ -88,7 +89,7 @@
           width: 60px;
           border-radius: 50%;
           overflow: hidden;
-          transform: translateX(-18px) translateY(10px);
+          // transform: translateY(-10px);
           img{
             width: 100%;
           }
@@ -120,10 +121,8 @@
           }
         }
         .navSmallRight{
-          img{
-            height: 25px;
-            padding-right: 25px;
-          }
+          margin-right: 30px;
+          font-size: 16px;
         }
       }
     }
