--- a/dev/sass/_nav.scss
+++ b/dev/sass/_nav.scss
@@ -74,6 +74,9 @@
         display: flex;
         justify-content: space-between;
         a {
+          &:hover{
+            cursor: pointer;
+          }
           img{
             width: 20px;
             margin-right: 5px;
@@ -121,6 +124,9 @@
           }
         }
         .navSmallRight{
+          &:hover{
+            cursor: pointer;
+          }
           margin-right: 30px;
           font-size: 16px;
         }
