--- a/dev/sass/_lightBox.scss
+++ b/dev/sass/_lightBox.scss
@@ -120,3 +120,20 @@
   }
 }
 
+.scheLightBox{
+  margin: 50px auto;
+  background-color: white;
+  border:1px solid red;
+  padding:20px;
+  max-width: 390px;
+  height: 660px;
+  display: flex;
+  flex-direction: column;
+  .closedBtn {
+    width: 24px;
+    height: 24px;
+    align-self: flex-end;
+    img{
+      width:100%;
+    }
+}
