--- a/dev/sass/_lightBox.scss
+++ b/dev/sass/_lightBox.scss
@@ -71,8 +71,7 @@
     img{
       width:100%;
     }
-  }
-    
+  } 
   .spotLightBoxImg {
     max-width: 350px;
     height: 220px;
@@ -95,7 +94,6 @@
         img {
           width: 100%;
         }
-        // background-size: 20px 20px;
 
       }
     }
@@ -123,7 +121,6 @@
 .scheLightBox{
   margin: 50px auto;
   background-color: white;
-  border:1px solid red;
   padding:20px;
   max-width: 390px;
   height: 660px;
@@ -136,4 +133,33 @@
     img{
       width:100%;
     }
-}
+  }
+  .scheLightBoxImg {
+      border: 1px solid green;
+      max-width: 350px;
+      height: 220px;
+      margin: 10px auto;
+      overflow: hidden;
+      img{
+        width: 100%;
+      }
+    }
+  //   .scheName{
+  //     font-weight: 300;
+  //     padding: 0 5px;
+  //   }
+  //   .scheContent{
+  //     margin-top: 30px;
+  //     div{
+  //       padding: 5px;
+  //     }
+  //   }
+  //   .heartimg{
+  //     width: 20px;
+  //     height: 20px;
+  //     align-self: flex-end;
+  //     img {
+  //       width: 100%;
+  //     }
+  //   }
+  }
