--- a/dev/sass/_member.scss
+++ b/dev/sass/_member.scss
@@ -91,47 +91,153 @@ border-radius: 5px 0 0 0;
     display: flex;
     padding-top: 50px;
     margin-top: 80px;
-
     .memLeft{
+      width: 100%;
       margin-top: 40px; 
       border: $borderLine 1px solid;
       background-color: $colorSecondary2;
       border-radius: 5px;
       overflow: hidden;
       margin-bottom: 10px;
-      .memInfoTitle{
+      .memLeftHead{
         height: 50px;
         line-height: 50px;
-        font-size: 24px;
+        font-size: 20px;
         background-color: $colorSecondary1;
         border-bottom: $borderLine 1px solid;
         color: $colorMain1;
         text-align: center;
       }
-      .memInfo{
-        padding-top: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        .memPhoto{
-          border-radius: 50%;
-          margin: 10px;
-          width:118px;
-          height: 118px;
+      .memLeftPic{
+        width: 100px;
+        height: 100px;
+        overflow: hidden;
+        border-radius: 50%;
+        border: 1px solid black;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        margin-top: 20px;
+        margin-bottom: 10px;
+        img{
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .memLeftName{
+        text-align: center;
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 20px;
+      }
+      ul{
+        // border: 1px solid red;
+        list-style: none;
+        line-height: 30px;
+        width: 220px;
+        margin-bottom: 10px;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        margin-bottom: 20px;
+        @media screen and (max-width: $breakpoint-lg){
+          width: 250px;
+        }
+        li{
+          white-space:nowrap;
+          text-overflow:ellipsis; 
           overflow: hidden;
-          img{  
-            width:100%;
+          letter-spacing: 1.5px;
+        }
+      }
+      .adjustProfile{
+        margin-left: 50%;
+        transform: translateX(-50%);
+        margin-bottom: 20px;
+        @include button(120px, 35px, $colorSecondary2, $colorMain1, $colorMain1)
+      }
+    }
+    .memLeftAdjust{
+      width: 100%;
+      display: none;
+      margin-top: 40px; 
+      border: $borderLine 1px solid;
+      background-color: $colorSecondary2;
+      border-radius: 5px;
+      overflow: hidden;
+      margin-bottom: 10px;
+      form{
+        .memLeftHeadAdjust{
+          height: 50px;
+          line-height: 50px;
+          font-size: 20px;
+          background-color: $colorSecondary1;
+          border-bottom: $borderLine 1px solid;
+          color: $colorMain1;
+          text-align: center;
+        }
+        .memLeftPicAdjust{
+          width: 100px;
+          height: 100px;
+          overflow: hidden;
+          border-radius: 50%;
+          border: 1px solid black;
+          margin-left: 50%;
+          transform: translateX(-50%);
+          margin-top: 20px;
+          margin-bottom: 10px;
+          img{
+            width: 100%;
+            height: 100%;
           }
         }
-        table {
-          margin: 10px;
+        .memLeftNameAdjust{
+          text-align: center;
+          text-align: center;
+          font-size: 20px;
+          font-weight: 500;
+          margin-bottom: 20px;
         }
-        .divforBtn{
-          width: 100%;
-          display: flex;
-          margin: 10px;
-          justify-content: space-around;
+        .memLeftAdjustUl{
+          // border: 1px solid red;
+          list-style: none;
+          line-height: 30px;
+          width: 220px;
+          margin-bottom: 10px;
+          margin-left: 50%;
+          transform: translateX(-50%);
+          margin-bottom: 20px;
+          .memLeftAdjustLi{
+            white-space: nowrap;
+            letter-spacing: 1.5px;
+            margin-top: 10px;
+            input{
+              padding: 0;
+              outline: double;
+              width: 130px;
+              padding-left: 5px;
+              @media screen and (max-width: $breakpoint-lg){
+                width: 170px;
+              }
+            }
+          }         
         }
+        .memLeftAdjustBtns{
+          // border: 1px solid red;
+          margin-left: 50%;
+          transform: translateX(-50%);
+          white-space: nowrap;
+          display: inline-block;
+          #memLeftAdjustSave{
+            @include button(70px, 35px, $colorSecondary2, $colorMain1, $colorMain1);
+            margin-bottom: 20px; 
+            margin-right: 20px; 
+            display: inline-block;                 
+          }
+          #memLeftAdjustCancel{
+            @include button(70px, 35px, $colorMain1, $colorSecondary2, $colorMain1);
+            margin-bottom: 20px;
+            display: inline-block; 
+          }
+        }      
       }
     }
     .memRight{
