--- a/dev/sass/_member.scss
+++ b/dev/sass/_member.scss
@@ -225,7 +225,7 @@ border-radius: 5px 0 0 0;
           .memLeftAdjustLi{
             white-space: nowrap;
             letter-spacing: 1.5px;
-            margin-top: 10px;
+            // margin-top: 10px;
             input{
               letter-spacing: 1.5px;
               padding: 0;
