--- a/dev/sass/_member.scss
+++ b/dev/sass/_member.scss
@@ -225,12 +225,10 @@ border-radius: 5px 0 0 0;
           .memLeftAdjustLi{
             white-space: nowrap;
             letter-spacing: 1.5px;
-            margin-top: 10px;
+            // margin-top: 10px;
             input{
               letter-spacing: 1.5px;
               padding: 0;
-              // outline: double;
-              // border-bottom: 1px solid black;
               width: 130px;
               padding-left: 5px;
               @media screen and (max-width: $breakpoint-lg){
