--- a/dev/sass/_member.scss
+++ b/dev/sass/_member.scss
@@ -136,13 +136,14 @@ border-radius: 5px 0 0 0;
         img{
           width: 100%;
           height: 100%;
+          object-fit: cover;
         }
       }
       .memLeftName{
         text-align: center;
         font-size: 20px;
         font-weight: 500;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
       ul{
         // border: 1px solid red;
@@ -202,20 +203,33 @@ border-radius: 5px 0 0 0;
           img{
             width: 100%;
             height: 100%;
+            object-fit: cover;
           }
         }
-        .chooseFile{
-          width: 100px;
-          height: 30px;
-          border: 1px solid black;
-          // display: inline-block !important;
+        label.chooseFile{
+          width: 90px;
+          height: 25px;
+          text-align: center;
+          padding-top: 1px;
+          margin-left: 50%;
+          transform: translateX(-50%);
+          font-size: 14px;
+          color: $colorSecondary2;
+          background-color: $colorMain1;
+          border: 1px solid $colorMain1;
+          border-radius: 5px;
+          transition: .5s;
+          &:hover{
+            color: $colorMain1;
+            background-color: $colorSecondary2;
+        }
         }
         .memLeftNameAdjust{
           text-align: center;
           text-align: center;
           font-size: 20px;
           font-weight: 500;
-          margin-bottom: 20px;
+          margin-bottom: 10px;
         }
         .memLeftAdjustUl{
           // border: 1px solid red;
