新增手機版註冊

--- a/dev/sass/_homepageBody.scss
+++ b/dev/sass/_homepageBody.scss
@@ -684,7 +684,7 @@
         }
 
         pre.taiwan576 {
-            // border: 1px solid red;
+            border: 1px solid red;
             font-size: 18px;
             margin-left: 50%;
             transform: translateX(-50%);
