--- a/dev/sass/_nav.scss
+++ b/dev/sass/_nav.scss
@@ -120,6 +120,7 @@
         position: relative;  
         .navSmallCenter{
           padding: 5px;
+          transform: translateX(-35px);
           img{
               height: 60px;
           }
@@ -128,7 +129,14 @@
           &:hover{
             cursor: pointer;
           }
-          margin-right: 30px;
+          margin-right: 20px;
+          font-size: 16px;
+        }
+        .navSmallRight1{
+          &:hover{
+            cursor: pointer;
+          }
+          margin-right: 20px;
           font-size: 16px;
         }
       }
