--- a/dev/sass/_nav.scss
+++ b/dev/sass/_nav.scss
@@ -16,7 +16,8 @@
       max-width: 1200px;
       display: flex;
       justify-content: space-between;
-      .navLeft{
+      letter-spacing: 1.5px;
+      .navLeft{       
         padding-left: 10px;
         a {
           padding: 5px;
@@ -26,15 +27,19 @@
             height: 65px;
           }
           div.daijoubu{
+            width: 180px;
             margin-left: 10px;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
             line-height: 25px;
+            letter-spacing: 1.5px;
             .daijoubuMd{
               font-size: 24px;
             }
             .daijoubuEn{
+              // border: 1px solid red;
+              padding: 3px;
               font-size: 14px;
             }
           }
@@ -65,6 +70,11 @@
         }
         a:hover::after {
           width: 100%;
+        }
+        .nav-linkMember{
+          &:hover{
+            cursor: pointer;
+          }
         }
       }
       .navRight {
@@ -144,23 +154,26 @@
   }
 }
 #panel{
+  // border: 1px solid red;
   padding: 30px;
+  padding-top: 20px;
   display: none;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.9);
   position: absolute;
-  top:70px;
+  top: 70px;
   width: 100%;
-  z-index: 30;
+  z-index: 300;
 }
 #panel a{
   font-size: $content;
   color: $colorSecondary3; 
   text-decoration: none;
-  padding: 10px;
+  padding: 5px;
   display: block;
   &:hover{
     color: $colorMain1;
+    cursor: pointer;
   }
 }
 .hamburger {
