--- a/dev/sass/_groupShow.scss
+++ b/dev/sass/_groupShow.scss
@@ -17,8 +17,8 @@ a {
         height: 40vh;
         // margin-bottom: 50px;
         overflow: hidden;
-        img{
-            width:100%;
+        img {
+            width: 100%;
         }
     }
     a {
@@ -60,7 +60,7 @@ a {
         display: none;
         padding: 6px 12px;
         background-color: white;
-        border: 1px solid blue;
+        // border: 1px solid blue;
     }
     #activity {
         .actAll {
@@ -73,7 +73,7 @@ a {
             }
             .btnsAct {
                 max-width: 130px;
-                border: 1px solid blue;
+                // border: 1px solid blue;
                 display: block;
                 margin: 5px;
                 button {
