--- a/dev/sass/_groupShow.scss
+++ b/dev/sass/_groupShow.scss
@@ -61,6 +61,7 @@ body {
         padding: 20px;
         background-color: white;
         // border: 1px solid blue;
+        margin-bottom: 50px;
     }
     #activity {
         .actAll {
