--- a/dev/sass/_lightBox.scss
+++ b/dev/sass/_lightBox.scss
@@ -136,7 +136,7 @@
   }
 }
   .scheLightBoxImg {
-      border: 1px solid green;
+      // border: 1px solid green;
       max-width: 350px;
       height: 220px;
       margin: 10px auto;
