--- a/dev/sass/_blogView.scss
+++ b/dev/sass/_blogView.scss
@@ -40,15 +40,18 @@ body {
         border-radius: 5px 5px 5px 5px;
     }
 
-    button {
-        width: 30px;
-        padding: 0;
-        margin: 0;
-        border: none;
-        background-color: lightgray;
-        border-radius: 0px 5px 5px 0px;
-        height: 0px;
+    .blogSearch {
+        // width: 30px;
+        // padding: 0;
+        // margin: 0;
+        // border: none;
+        // background-color: lightgray;
+        // border-radius: 0px 5px 5px 0px;
+        // height: 0px;
+        // font-size: $s_content;
         font-size: $s_content;
+        margin-left: 10px;
+        @include button(70px, 30px, $colorSecondary2, $colorMain1, $colorMain1);
 
         img {
             width: 25px;
