--- a/dev/sass/_nav.scss
+++ b/dev/sass/_nav.scss
@@ -102,10 +102,11 @@
           width: 60px;
           border-radius: 50%;
           overflow: hidden;
+          border: 1px solid black;
           img{
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: cover;           
           }
         }
       }   
