fix groupview filter

--- a/dev/sass/_groupView.scss
+++ b/dev/sass/_groupView.scss
@@ -184,6 +184,8 @@ body {
         // width: 50vw;
         .groupViewLeft {
             padding: 0;
+            // border: 1px solid red;
+            margin-top: 10px;
 
             .fliterBlock {
                 border-radius: 5px;
