fix blog write btn and some rwd

--- a/dev/sass/_groupView.scss
+++ b/dev/sass/_groupView.scss
@@ -156,7 +156,7 @@ body {
         }
 
         .groupFBtn {
-            border: none;
+            // border: none;
             // border: 1px solid red;
 
 
